jEdit 5.0 version history
       (changes since jEdit 4.5)
:encoding=UTF-8:

{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler for contributing to this release.

{{{ Bug fixes


}}}
{{{ API Changes


}}}
{{{ Editing


}}}
{{{ UI


}}}
{{{ Miscellaneous


}}}

}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: